added json-server, axios use axios to retrieve json data served by json-server completed 2.11

--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "json-server": "^0.15.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "server": "json-server -p3001 db.json"
   },
   "scripts": {
     "start": "react-scripts start",
