fix misplaced script in package.json get persons state from db.json

--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -7,14 +7,14 @@
     "json-server": "^0.15.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2",
-    "server": "json-server -p3001 db.json"
+    "react-scripts": "3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server -p3001 db.json"
   },
   "eslintConfig": {
     "extends": "react-app"
